	PR libgcj/27294: 	* java/lang/natVMClassLoader.cc (defineClass): Throw 	VirtualMachineError if no interpreter configured.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@113554 138bc75d-0d04-0410-961f-82ee72b054a4