libjava/java/lang/natVMClassLoader.cc
@@ -1,6 +1,6 @@
 // natVMClassLoader.cc - VMClassLoader native methods
 
-/* Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004, 2005  Free Software Foundation
+/* Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006  Free Software Foundation
 
    This file is part of libgcj.
 
@@ -34,6 +34,7 @@ details.  */
 #include <java/lang/StringBuffer.h>
 #include <java/lang/Runtime.h>
 #include <java/util/HashSet.h>
+#include <java/lang/VirtualMachineError.h>
 
 java::lang::Class *
 java::lang::VMClassLoader::defineClass (java::lang::ClassLoader *loader,
@@ -93,6 +94,20 @@ java::lang::VMClassLoader::defineClass (java::lang::ClassLoader *loader,
       JvAssert (klass->state == JV_STATE_LOADED);
     }
 #endif // INTERPRETER
+
+  if (! klass)
+    {
+      StringBuffer *sb = new StringBuffer();
+      if (name)
+	{
+	  sb->append(JvNewStringLatin1("found class file for class "));
+	  sb->append(name);
+	}
+      else
+	sb->append(JvNewStringLatin1("found unnamed class file"));
+      sb->append(JvNewStringLatin1(", but no interpreter configured in this libgcj"));
+      throw new VirtualMachineError(sb->toString());
+    }
 
   return klass;
 }
